--- a/index.html
+++ b/index.html
@@ -1,2 +1,37 @@
-<h1>Hello !</h1>
+<!doctype html>
+<html lang="en" ng-app>
+<head>
+	<meta charset="utf-8">
+	<title>My AngularJS App</title>
+	<link rel="stylesheet" href="css/app.css"/>
+	<!-- In production use:
+	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
+	-->
+	<script src="lib/angular.min.js"></script>
+	<script src="js/controllers.js"></script>
+</head>
 
+<body ng-controller="KarmaShowCtrl">
+
+	<ul class="images">
+		<li ng-repeat="r in redditjson.data.children">
+			<img src="{{r.data.thumbnail}}" title="{{r.data.title}}" onclick="loadVideo('{{r.data.media.oembed.url}}');" />
+		</li>
+	</ul>
+	
+	<div align="center"><div id="player" /></div>
+	<script src="http://www.youtube.com/player_api"></script>
+	<script>
+		var player;
+		function onYouTubeIframeAPIReady() {
+			player = new YT.Player('player', {height: 300, width: (300*640/390) });
+		}
+		function loadVideo(url) {
+			videoid = url.match(/(?:https?:\/{2})?(?:w{3}\.)?youtu(?:be)?\.(?:com|be)(?:\/watch\?v=|\/)([^\s&]+)/);
+			player.loadVideoById(videoid[1]);
+		}
+	</script>
+	
+</body>
+
+</html>
