--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<script src="lib/jquery-2.0.3.min.js"></script>
 	<script src="lib/jquery-ui-1.10.3.min.js"></script>
 	<script src="lib/angular.min.js"></script>
+	<script src="js/app.js"></script>
 	<script src="js/controllers.js"></script>
 </head>
 
