--- a/index.html
+++ b/index.html
@@ -20,6 +20,24 @@
 	<div class="mainTitle" id="mainTitle">
 		<div class="title">The Karma Show</div>	
 		<div class="whiteline"></div>
+		<div class="mainmenu">
+			<table>
+				<tr><th>Sort</th><th>Time</th><th>Subreddit</th></tr>
+				<tr>
+					<td id="sort">
+						<div class="selected">Top</div>
+						<div>Hot</div>
+					</td>
+					<td id="t">
+						<div class="selected">Week</div>
+						<div>Day</div>
+					</td>
+					<td id="subreddit">
+						<div class="selected">All</div>
+					</td>
+				</tr>
+			</table>
+		</div>
 		<div class="reddit">powered by <a href="http://www.reddit.com">Reddit</a></div>
 	</div>
 
@@ -89,9 +107,36 @@
 			$("iframe, player").height($(window).height());
 			$("iframe, player").width($(window).width());
 		});	
-		
+
+		$(document).ready(function() {
+			$("div.mainmenu div").click(function(event) {
+				$(event.target).parent().children().removeClass("selected");
+				$(event.target).addClass("selected");
+				var id = $(event.target).parent().attr('id');
+				var value = $(event.target).text().toLowerCase();
+				$scope = angular.element($('body')).scope()
+				$scope.$apply(function() {
+					path = $scope.$location.path('')
+					search = path.search();
+					search[id] = value;
+					path.search(search);
+				});
+			});
+		});
+
 	</script>
 	
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-44340605-1', 'dabe.github.io');
+		ga('send', 'pageview');
+
+	</script>
+
 </body>
 
 </html>
