--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 			<img height="100" id='{{r.data.name}}' src="{{r.data.media.oembed.thumbnail_url || r.data.thumbnail}}" title="{{r.data.title}}" alt="" onclick="loadVideo('{{r.data.name}}', '{{r.data.media.oembed.url}}');" />
 			</li>
 		</ul>
+		<div class="loading" id="loading" ng-show="loading"><img src='pict/loading.gif' /></div>
 	</div>
 
 	<div class="showvideos" onclick="showvideos()"></div>
