--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
 	<title>The Karma Show</title>
 	<link rel="stylesheet" href="css/app.css"/>
-	<!-- In production use:
-	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
-	-->
 	<script src="lib/jquery-2.0.3.min.js"></script>
 	<script src="lib/jquery-ui-1.10.3.min.js"></script>
 	<script src="lib/angular.min.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/controllers.js"></script>
+
+	<script type="text/javascript">var switchTo5x=true;</script>
+	<script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+	<script type="text/javascript">stLight.options({publisher: "b642df4c-6fab-44a0-aa98-ecd96c607065", doNotHash: true, doNotCopy: false, hashAddressBar: false});</script>
+
 </head>
 
 <body ng-controller="KarmaShowCtrl">
@@ -43,7 +45,11 @@
 				</tr>
 			</table>
 		</div>
-		<!--<div class="reddit">powered by <a href="http://www.reddit.com">Reddit</a></div>-->
+	<div class="share">
+		<span class='st_reddit_large' displayText='Reddit'></span>
+		<span class='st_facebook_large' displayText='Facebook'></span>
+		<span class='st_twitter_large' displayText='Tweet'></span>
+	</div>
 	</div>
 
 	<div class="menubutton" onclick="showmenu()">&#9776;</div>
@@ -63,6 +69,8 @@
 
 	<div align="center" class="videoplayer"><div id="player" /></div>
 	<script src="http://www.youtube.com/player_api"></script>
+
+
 	<script>
 		var scrollpos = 0;
 		var w = window,
