--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
 	<title>The Karma Show</title>
+	<link rel="shortcut icon" href="pict/favicon.ico" />
 	<link rel="stylesheet" href="css/app.css"/>
 	<script src="lib/jquery-2.0.3.min.js"></script>
 	<script src="lib/jquery-ui-1.10.3.min.js"></script>
