--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 	<div class="mainTitle" id="mainTitle">
 		<table class="aliens" style="width:100%; text-align:center;" >
 			<tr>
-				<td><a href="http://www.reddit.com" target="_blank"><img height="70" src="/pict/reddit-alien.png" /></a></td>
-				<td><a href="http://www.reddit.com" target="_blank"><img height="70" src="/pict/reddit-alien.png" /></a></td>
-				<td><a href="http://www.reddit.com" target="_blank"><img height="70" src="/pict/reddit-alien.png" /></a></td>
-				<td><a href="http://www.reddit.com" target="_blank"><img height="70" src="/pict/reddit-alien.png" /></a></td>
+				<td><a href="http://www.reddit.com" target="_blank"><img height="70" src="pict/reddit-alien.png" /></a></td>
+				<td><a href="http://www.reddit.com" target="_blank"><img height="70" src="pict/reddit-alien.png" /></a></td>
+				<td><a href="http://www.reddit.com" target="_blank"><img height="70" src="pict/reddit-alien.png" /></a></td>
+				<td><a href="http://www.reddit.com" target="_blank"><img height="70" src="pict/reddit-alien.png" /></a></td>
 			</tr>
 		</table>
 		<div class="title">The Karma Show</div>	
